# stagepilot

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  release-macos.yml  release-windows.yml
.stagepilot-backup/e7-velocity-mapping-20260713-182103/scripts/: run-demo-hardware.ps1
.stagepilot-backup/propresenter-v04-20260714-185303/: .env.example
.stagepilot-backup/targeted-test-text-20260714-200431/: Dashboard.test.tsx  MidiSetupPanel.test.tsx
backend/: .env.example  .gitignore  README.md  pyproject.toml  stagepilot.spec
backend/src/stagepilot/: __init__.py  __main__.py  main.py
backend/src/stagepilot/api/: routes.py  websocket.py
backend/src/stagepilot/core/: __init__.py  actions.py  config.py  event_bus.py  events.py  lights.py  logging.py  midi.py  plan_cache.py  plugin.py  propresenter.py  runtime.py  settings.py  state.py
backend/src/stagepilot/models/: __init__.py  api.py  state.py
backend/src/stagepilot/plugins/: __init__.py
backend/src/stagepilot/plugins/demo/: __init__.py  data.py  events.py  plugin.py
backend/src/stagepilot/plugins/lights/: __init__.py  client.py  plugin.py
backend/src/stagepilot/plugins/midi_playback/: __init__.py  client.py  models.py  plugin.py
backend/src/stagepilot/plugins/planning_center/: __init__.py  client.py  errors.py  models.py  plugin.py
backend/src/stagepilot/plugins/propresenter/: __init__.py  client.py  errors.py  models.py  plugin.py
backend/src/stagepilot/services/: planning_center_setup.py  state_service.py
backend/tests/: test_api.py  test_config.py  test_event_bus.py  test_lights_api.py  test_lights_plugin.py  test_lights_settings.py  test_midi_client.py  test_midi_config_api.py  test_midi_config_api.py.before-indent-fix  test_midi_plugin.py  test_midi_selection_api.py  test_plan_cache.py  test_planning_center_client.py  test_planning_center_plan_discovery.py  test_planning_center_plugin.py  test_planning_center_setup_api.py  test_plugin_manager.py  test_propresenter_api.py  test_propresenter_client.py  test_propresenter_config.py  test_propresenter_plugin.py  test_propresenter_recovery.py  test_propresenter_recovery.py.before-list-calls-fix-20260714-191456  test_propresenter_recovery.py.before-recovery-test-fix-20260714-191245  test_settings_persistence.py  test_state_models.py  test_state_service.py
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.release.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: configuration.md  desktop-packaging.md  lights.md  multitracks-client-registration.md  multitracks-cue-automation.md  plugins.md  propresenter.md  security.md  v0.5-acceptance.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  api.test.ts  api.ts  desktop.ts  index.css  types.ts
graphify-out/: .graphify_health.json  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: build_backend_sidecar.py  run-demo-hardware.ps1
tools/multitracks-cues/: README.md  config.example.json  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
(+89 files in other folders)
