[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "stagepilot"
version = "1.0.0"
description = "Event-driven production automation backend for StagePilot"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "keyring>=25.6,<26.0",
  "mido[ports-rtmidi]>=1.3.3,<2.0",
  "pydantic>=2.10,<3.0",
  "structlog>=24.4,<26.0",
  "tzdata>=2025.2; sys_platform == 'win32'",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.9,<1.0",
]
packaging = [
  "pyinstaller>=6.14,<7.0",
]

[project.scripts]
stagepilot = "stagepilot.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/stagepilot"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mido", "mido.*"]
ignore_missing_imports = true
