[package]
name = "stagepilot-desktop"
version = "0.9.11"
description = "Native desktop shell for StagePilot"
authors = ["StagePilot contributors"]
edition = "2021"
rust-version = "1.77.2"
license = "GPL-3.0-or-later"

[lib]
name = "stagepilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["time"] }
